# helicopter_game

./: .gitignore  CMakeLists.txt  README.md
assets/: cavern.fs
src/: Constants.h  Explosion.h  Game.cpp  Game.h  Helicopter.cpp  Helicopter.h  Level.cpp  Level.h  Missile.cpp  Missile.h  MissileFactory.cpp  Projectile.h  Shape.cpp  Shape.h
src/Core/: AudioManager.cpp  AudioManager.h  Constants.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  LeaderboardManager.cpp  LeaderboardManager.h
src/Entities/: Explosion.cpp  Helicopter.cpp  Helicopter.h  Missile.cpp  Missile.h  MissileFactory.cpp  MissileFactory.h  Projectile.cpp  Projectile.h  Rock.cpp  Rock.h
src/Level/: BackgroundManager.cpp  BackgroundManager.h  Level.cpp  Level.h  Shape.h
